--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,13 @@
     <!-- This element's contents will be replaced with your component. -->
   </div>
 
-  <script src="https://www.google.com/recaptcha/api.js?&render=explicit"
-  async defer>
-</script>
+  <script src="https://www.google.com/recaptcha/api.js?&render=explicit" async defer>
+  </script>
+
+
+
+
+
 </body>
 
 </html>
