--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
 
   <script src="https://www.google.com/recaptcha/api.js?&render=explicit" async defer>
   </script>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 
 
 
