--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body>
+<body style="background-color: rgb(231, 231, 231)">
 
   <!-- Messenger Chat Plugin Code -->
   <div id="fb-root"></div>
