--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,12 @@
 
   <script>
     var chatbox = document.getElementById('fb-customer-chat');
-    chatbox.setAttribute("page_id", "112935184492163");
+    chatbox.setAttribute("page_id", "110831114701977");
     chatbox.setAttribute("attribution", "biz_inbox");
+  </script>
 
+  <!-- Your SDK code -->
+  <script>
     window.fbAsyncInit = function () {
       FB.init({
         xfbml: true,
