--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
       emailjs.init("user_zh5QsjFDwO8o1tCY9tkoy");
     })();
   </script>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2076623434707119"
+    crossorigin="anonymous"></script>
 
 </head>
 
